kubemanifest/overlay/production/contoh-app/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 2022
  selector:
    app: app
