kubemanifest/overlay/production/contoh-app/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
    - host: 127.0.0.1.nip.io
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: svc
                port: 
                  number: 8080
